--- a/Anchor.toml
+++ b/Anchor.toml
@@ -4,18 +4,23 @@
 seeds = false
 skip-lint = false
 
-#[programs.localnet]
-#battleboosters = "9DZTGocMWp5n7nH9dfN4VMxhDoZuN82AAsne4qcaWygJ"
+[programs.localnet]
+battleboosters = "H85sU4mupXtsMZmtHM4y1Cucjfb7SVh7Q3eFrbZPX6a1"
 
 [programs.devnet]
-battleboosters = "AYsivJpxmwVfeUaBWg7FZt4MDatg2myKCSS52UTCDXeS"
+battleboosters = "3Hwjee2TATrdZiXAEkbvCHU66AsMzLUTXBUmmfYmzyVo"
+
+[programs.testnet]
+battleboosters = "3Hwjee2TATrdZiXAEkbvCHU66AsMzLUTXBUmmfYmzyVo"
+
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "devnet"
+cluster = "http://127.0.0.1:8899"
 wallet = "/Users/0xantman/.config/solana/id.json"
+
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
