--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
     },
     "dependencies": {
         "@coral-xyz/anchor": "^0.29.0",
+        "@metaplex-foundation/js": "^0.20.1",
         "@metaplex-foundation/mpl-token-metadata": "^3.2.0",
-        "@solana/spl-token": "^0.4.0"
+        "@metaplex-foundation/umi": "^0.9.1",
+        "@metaplex-foundation/umi-bundle-defaults": "^0.9.1",
+        "@solana/spl-token": "^0.4.0",
+        "@solana/web3.js": "^1.90.0"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
