--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "@metaplex-foundation/umi": "^0.9.1",
         "@metaplex-foundation/umi-bundle-defaults": "^0.9.1",
         "@solana/spl-token": "^0.4.0",
-        "@solana/web3.js": "^1.90.0"
+        "@solana/web3.js": "^1.90.0",
+        "@switchboard-xyz/common": "^2.3.17"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
