--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "@metaplex-foundation/umi-bundle-defaults": "^0.9.1",
         "@solana/spl-token": "^0.4.0",
         "@solana/web3.js": "^1.90.0",
-        "@switchboard-xyz/common": "^2.3.17"
+        "@switchboard-xyz/common": "^2.3.17",
+        "@switchboard-xyz/solana.js": "^3.2.5"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
