--- a/programs/battleboosters/Cargo.toml
+++ b/programs/battleboosters/Cargo.toml
@@ -20,4 +20,6 @@ anchor-lang = "0.29.0"
 anchor-spl = "0.29.0"
 ahash = "=0.8.6"
 mpl-token-metadata = "4.1.1"
-switchboard-solana = "0.29.98"
+switchboard-solana = "0.29.99"
+solana-randomness-service = { version = "1.0.2", features = ["cpi"] }
+
