--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@solana/spl-token": "^0.4.0",
         "@solana/web3.js": "^1.90.0",
         "@switchboard-xyz/common": "^2.3.17",
+        "@switchboard-xyz/solana-randomness-service": "^1.0.0",
         "@switchboard-xyz/solana.js": "^3.2.5"
     },
     "devDependencies": {
