--- a/Anchor.toml
+++ b/Anchor.toml
@@ -5,13 +5,13 @@ seeds = false
 skip-lint = false
 
 [programs.localnet]
-battleboosters = "Gj79kPnmGM6fs5kRyFW3uhQ3tNaQPtUSgzLujMS7k54V"
+battleboosters = "2A1e7TJ6cehtwAdPR5jWkDRuxNcZb4UxBYwfs6JLH3ZY"
 
 [programs.devnet]
-battleboosters = "Gj79kPnmGM6fs5kRyFW3uhQ3tNaQPtUSgzLujMS7k54V"
+battleboosters = "2A1e7TJ6cehtwAdPR5jWkDRuxNcZb4UxBYwfs6JLH3ZY"
 
 [programs.testnet]
-battleboosters = "Gj79kPnmGM6fs5kRyFW3uhQ3tNaQPtUSgzLujMS7k54V"
+battleboosters = "2A1e7TJ6cehtwAdPR5jWkDRuxNcZb4UxBYwfs6JLH3ZY"
 
 [[test.genesis]]
 address = "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s"
@@ -19,7 +19,7 @@ program = "tests/programs/metadata.so"
 
 
 [test.validator]
-url = "https://api.mainnet-beta.solana.com"
+url = "https://api.devnet.solana.com"
 #ledger = ".anchor/test-ledger"
 
 ## SOL/USD mainnet pyth
@@ -49,6 +49,7 @@ address = "5MFs7RGTjLi1wtKNBFRtuLipCkkjs4YQwRRU9sjnbQbS"
 [[test.validator.clone]]
 address = "5ExuoQR69trmKQfB95fDsUGsUrrChbGq9PFgt8qouncz"
 
+
 [registry]
 url = "https://api.apr.dev"
 
@@ -59,3 +60,8 @@ wallet = "/Users/0xantman/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+
+[test]
+startup_wait = 15000
+shutdown_wait = 2000
+
