--- a/programs/battleboosters/Cargo.toml
+++ b/programs/battleboosters/Cargo.toml
@@ -17,9 +17,9 @@ default = []
 
 [dependencies]
 anchor-lang = "0.29.0"
-anchor-spl = "0.29.0"
+anchor-spl = {version = "0.29.0", features = ["metadata"]}
 ahash = "=0.8.6"
 mpl-token-metadata = "4.1.1"
 switchboard-solana = "0.29.99"
 solana-randomness-service = { version = "1.0.2", features = ["cpi"] }
-
+solana-program = {version = "1.16.27"}
