--- a/Anchor.toml
+++ b/Anchor.toml
@@ -5,13 +5,13 @@ seeds = false
 skip-lint = false
 
 [programs.localnet]
-battleboosters = "3aMhXWHYkZ8AwPtZs1bPd1nmNJd9vV5QtHbgRaVuyqmd"
+battleboosters = "D7pSmNhiqoTfDvr7fPTm1ZK7SUZGUgkZMTCa9Fwx5N6w"
 
 [programs.devnet]
-battleboosters = "3aMhXWHYkZ8AwPtZs1bPd1nmNJd9vV5QtHbgRaVuyqmd"
+battleboosters = "BfB9pE17fXGJpWvamo7WceEkQ9VHqaxEzCnvs3Ac42Rg"
 
 [programs.testnet]
-battleboosters = "3aMhXWHYkZ8AwPtZs1bPd1nmNJd9vV5QtHbgRaVuyqmd"
+battleboosters = "D7pSmNhiqoTfDvr7fPTm1ZK7SUZGUgkZMTCa9Fwx5N6w"
 
 [[test.genesis]]
 address = "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s"
@@ -54,7 +54,7 @@ address = "5ExuoQR69trmKQfB95fDsUGsUrrChbGq9PFgt8qouncz"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
+cluster = "devnet"
 wallet = "/Users/0xantman/.config/solana/id.json"
 
 
