--- a/Anchor.toml
+++ b/Anchor.toml
@@ -5,13 +5,13 @@ seeds = false
 skip-lint = false
 
 [programs.localnet]
-battleboosters = "7fvTzULhLmw4Vmk1HtwZwNQB1Wz2c4HX2ZBR6bZt7n26"
+battleboosters = "A92RCbQNmTNcGBQS63gvPXz1pdaVcSQjo4LZBQuswzia"
 
 [programs.devnet]
-battleboosters = "7fvTzULhLmw4Vmk1HtwZwNQB1Wz2c4HX2ZBR6bZt7n26"
+battleboosters = "A92RCbQNmTNcGBQS63gvPXz1pdaVcSQjo4LZBQuswzia"
 
 [programs.testnet]
-battleboosters = "7fvTzULhLmw4Vmk1HtwZwNQB1Wz2c4HX2ZBR6bZt7n26"
+battleboosters = "A92RCbQNmTNcGBQS63gvPXz1pdaVcSQjo4LZBQuswzia"
 
 [[test.genesis]]
 address = "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s"
@@ -54,7 +54,7 @@ address = "5ExuoQR69trmKQfB95fDsUGsUrrChbGq9PFgt8qouncz"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
+cluster = "devnet"
 wallet = "/Users/0xantman/.config/solana/id.json"
 
 
