--- a/programs/battleboosters/Cargo.toml
+++ b/programs/battleboosters/Cargo.toml
@@ -15,13 +15,17 @@ no-log-ix-name = []
 cpi = ["no-entrypoint"]
 default = []
 
+
 [dependencies]
 anchor-lang = {version = "0.29.0", features= ["init-if-needed"]}
 anchor-spl = {version = "0.29.0", features = ["metadata"]}
-ahash = "=0.8.6"
-mpl-token-metadata = "4.1.1"
-switchboard-solana = "0.29.99"
+ahash = "=0.8.11"
+mpl-token-metadata = "4.1.2"
+switchboard-solana = "0.29.107"
 solana-program = {version = "1.16.27"}
 sha2 = "0.10.8"
 switchboard-on-demand = "0.1.6"
+
+[toolchain]
+anchor_version = "0.29.0"
 
