--- a/programs/battleboosters/Cargo.toml
+++ b/programs/battleboosters/Cargo.toml
@@ -14,17 +14,26 @@ no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
 default = []
+#modern = ["solana-program"]
+#legacy = ["solana-program-legacy"]
+#idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
+idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
-anchor-lang = {version = "0.29.0", features= ["init-if-needed"]}
-anchor-spl = {version = "0.29.0", features = ["metadata"]}
-ahash = "=0.8.11"
+anchor-lang = {version = "0.30.0", features= ["init-if-needed"]}
+#anchor-spl = {version = "0.30.0", features = ["metadata"]}
+#ahash = "=0.8.6"
 mpl-token-metadata = "4.1.2"
-switchboard-solana = "0.29.107"
-solana-program = {version = "1.16.27"}
+solana-program = "=1.17"
+#solana-program-legacy = {package = "solana-program", version = "=1.17", optional = true}
 sha2 = "0.10.8"
-switchboard-on-demand = "0.1.6"
+switchboard-solana = "0.29.109"
+switchboard-on-demand =  "0.1.6"
+bytemuck = "1.15.0"
 
-[toolchain]
-anchor_version = "0.29.0"
+
+#[dependencies.switchboard-on-demand]
+#version = "0.1.6"
+#features = ["legacy"]
+
 
