--- a/programs/battleboosters/Cargo.toml
+++ b/programs/battleboosters/Cargo.toml
@@ -14,6 +14,7 @@ no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
 default = []
+#idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 [dependencies]
 anchor-lang = {version = "0.29.0", features= ["init-if-needed"]}
@@ -24,6 +25,7 @@ switchboard-solana = "0.29.107"
 solana-program = {version = "1.16.27"}
 sha2 = "0.10.8"
 switchboard-on-demand = "0.1.6"
+clap = { version = "4.5.7", features = ["derive"] }
 
 [toolchain]
 anchor_version = "0.29.0"
