--- a/programs/battleboosters/Cargo.toml
+++ b/programs/battleboosters/Cargo.toml
@@ -14,26 +14,16 @@ no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
 default = []
-#modern = ["solana-program"]
-#legacy = ["solana-program-legacy"]
-#idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
-idl-build = ["anchor-lang/idl-build"]
+idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
+
 
 [dependencies]
-anchor-lang = {version = "0.30.0", features= ["init-if-needed"]}
-#anchor-spl = {version = "0.30.0", features = ["metadata"]}
+anchor-lang = {version = "=0.30.0", features= ["init-if-needed"]}
+anchor-spl = {version = "=0.30.0", features = ["metadata"]}
 #ahash = "=0.8.6"
 mpl-token-metadata = "4.1.2"
-solana-program = "=1.17"
-#solana-program-legacy = {package = "solana-program", version = "=1.17", optional = true}
+solana-program = "1.18.15"
 sha2 = "0.10.8"
-switchboard-solana = "0.29.109"
-switchboard-on-demand =  "0.1.6"
+switchboard-on-demand =  { version = "0.1.8" }
 bytemuck = "1.15.0"
-
-
-#[dependencies.switchboard-on-demand]
-#version = "0.1.6"
-#features = ["legacy"]
-
 
