--- a/programs/battleboosters/Cargo.toml
+++ b/programs/battleboosters/Cargo.toml
@@ -18,12 +18,12 @@ idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 
 [dependencies]
-anchor-lang = {version = "=0.30.0", features= ["init-if-needed"]}
-anchor-spl = {version = "=0.30.0", features = ["metadata"]}
+anchor-lang = {version = "0.30.1", features= ["init-if-needed"]}
+anchor-spl = {version = "0.30.1", features = ["metadata"]}
 #ahash = "=0.8.6"
 mpl-token-metadata = "4.1.2"
-solana-program = "1.18.15"
+solana-program = "=1.18.17"
 sha2 = "0.10.8"
-switchboard-on-demand =  { version = "0.1.8" }
+switchboard-on-demand =  { version = "0.1.9" }
 bytemuck = "1.15.0"
 
