--- a/Anchor.toml
+++ b/Anchor.toml
@@ -80,7 +80,7 @@ url = "https://api.devnet.solana.com"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+cluster = "devnet"
 wallet = "~/.config/solana/id.json"
 
 
