--- a/programs/battleboosters/Cargo.toml
+++ b/programs/battleboosters/Cargo.toml
@@ -23,6 +23,7 @@ anchor-spl = {version = "0.30.1", features = ["metadata"]}
 mpl-token-metadata = "4.1.2"
 solana-program = "=1.18.17"
 sha2 = "0.10.8"
-switchboard-on-demand =  { version = "0.1.9" }
+switchboard-on-demand =  { version = "0.1.11" }
+pyth-solana-receiver-sdk = "0.2.0"
 
 
